<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_question"
        style="@style/textViewStyle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="top"
        android:hint="@string/add_new_question"
        android:layout_marginTop="20dp"
        android:id="@+id/askedQuestionEditText"/>

     <Button
         style="@style/buttonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:text="@string/ask_question"
         android:src="@mipmap/ic_launcher"
         android:id="@+id/submitQuestionButton"/>
    </LinearLayout>

