<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/appNameTextView"
    android:orientation="vertical">



    <TextView android:text="@string/login" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:id="@+id/emailLoginEditText"
        android:hint="@string/user_email"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordLoginEditText"
        android:hint="@string/password"
        android:fontFamily="sans-serif"/>

    <Button
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Login"
        android:id="@+id/loginButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="loginUser"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/signup_text"
        android:id="@+id/signupTextView"
        android:layout_margin="30dp" />

    <Button
        style="@style/buttonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Sign me up!"
        android:id="@+id/signupButton"
        android:layout_gravity="center_horizontal"
        android:onClick="signUp"/>


</LinearLayout>
